<resources>
    <string name="start_btn">Start</string>
    <string name="timer">Timer</string>
    <string name="question">Question</string>
    <string name="confirm">CONFIRM</string>
    <string name="elapsedTime">00:00</string>
    <string name="dialog_message">You Have Failed :(((((</string>
    <string name="dialog_title">Failed</string>
    <string name="intense_music">Intense Music</string>
    <string name="relax_music">Relax Music</string>
    <string name="life">Life: 100</string>
    <string name="score">Score: 0</string>
    <string name="next">Next</string>
    <string name="finish">Finish</string>
    <string name="enter_username">Enter Username</string>
    <string name="button_login">Log in</string>
    <string name="start_score">Score: 0</string>
    <string name="start_health">Health: 100</string>
    <string name="start_play">Play</string>
    <string name="app_name">Games</string>
    <string name="start">Start Fight</string>
    <string name="attack1">Attack 1</string>
    <string name="attack2">Attack 2</string>
    <string name="heal">Heal</string>
    <string name="defence">Defence</string>
    <string name="defText">What will you do?</string>
    <string name="hpDisplay">HP: 100/100</string>
    <string name="boss">BOSS</string>
    <string name="bosshpDisplay">HP: 100/100</string>
    <string name="pause">||</string>
    <string name="victory">You Win!</string>
    <string name="select">Select Your Character</string>
    <string name="c1">Character 1</string>
    <string name="c2">Character 2</string>
</resources>
