<?xml version="1.0" encoding="utf-8"?>

<FrameLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:layout_centerInParent="true"
    android:orientation="vertical"
    android:background="@color/colorBackground">

    <RelativeLayout
        xmlns:tools="http://schemas.android.com/tools"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:padding="16dp"
        tools:context=".QuizActivity">

        <TextView
            android:id="@+id/text_view_life"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_below="@+id/text_view_question_num"
            android:layout_marginTop="20dp"
            android:text="Life: 100"
            android:textColor="@android:color/black"
            android:textSize="25sp" />

        <TextView
            android:id="@+id/text_view_score"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_below="@+id/text_view_question_num"
            android:layout_alignParentRight="true"
            android:layout_marginTop="20dp"
            android:text="Score: 0"
            android:textColor="@android:color/black"
            android:textSize="25sp" />

        <Button
            android:id="@+id/button_confirm"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_below="@+id/radio_group"
            android:layout_margin="20dp"
            android:onClick="btn_confirm"
            android:text="@string/confirm" />

        <RadioGroup
            android:id="@+id/radio_group"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_centerVertical="true">

            <RadioButton
                android:id="@+id/radio_button_1"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="Option 1"
                android:textColor="@android:color/black" />

            <RadioButton
                android:id="@+id/radio_button_2"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="Option 2"
                android:textColor="@android:color/black" />

            <RadioButton
                android:id="@+id/radio_button_3"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="Option 3"
                android:textColor="@android:color/black" />
        </RadioGroup>

        <TextView
            android:id="@+id/text_view_countdown"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/elapsedTime"
            android:textColor="@android:color/black"
            android:layout_centerHorizontal="true"
            android:textSize="60sp" />

        <TextView
            android:id="@+id/text_view_question"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_below="@+id/text_view_life"
            android:layout_marginTop="40dp"
            android:textAlignment="center"
            android:background="@drawable/rectangle_drawable_back"
            android:text="Question\nQuestion\nQuestion"
            android:textColor="@android:color/black" />

        <TextView
            android:id="@+id/text_view_question_num"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_below="@+id/text_view_countdown"
            android:text="@string/question"
            android:textColor="@android:color/black"
            android:textSize="20sp" />

    </RelativeLayout>

    <ImageView
        android:id="@+id/pause_screen"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:background="#80000000"
        android:contentDescription=""
        android:textAlignment="center"
        android:contextClickable="false"
        android:clickable="false"
        android:onClick="pause_screen"
        android:visibility="gone"/>

</FrameLayout>

